--- a/CPP Project/CPP Project.vcxproj.filters
+++ b/CPP Project/CPP Project.vcxproj.filters
@@ -315,13 +315,22 @@
     <ClCompile Include="라인코테\6번.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="알고리즘챌린지\강의순서.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="프로그래머스\레벨3\1.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="프로그래머스\레벨3\2.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
     <ClCompile Include="프로그래머스\레벨2\끝말잇기.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="프로그래머스\레벨2\조이스틱%28미해결%29.cpp">
+    <ClCompile Include="프로그래머스\레벨2\압축.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="프로그래머스\레벨2\압축.cpp">
+    <ClCompile Include="프로그래머스\레벨2\조이스틱(미해결).cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="프로그래머스\레벨2\튜플순서.cpp">
